--- a/site/composer.json
+++ b/site/composer.json
@@ -36,6 +36,14 @@
     {
       "type": "composer",
       "url": "https://wpackagist.org"
+    },
+    {
+      "type": "composer",
+      "url": "https://packages.tinypixel.io/satispress/"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/pixelcollective/corporate-communion"
     }
   ],
   "require": {
@@ -47,18 +55,28 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/wp-config": "1.0.0",
     "roots/soil": ">=3.7.3",
-    "wpackagist-plugin/autodescription": ">=3.0.6",
+    "wpackagist-plugin/stream": "^3.2",
+    "wpackagist-plugin/updraftplus": ">=1",
+    "tiny-packagist/wp-migrate-db-pro": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-cli": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-media-files": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-multisite-tools": ">=1",
+    "tiny-packagist/monarch": ">=1",
+    "tiny-pixel/wp-performant-media": ">=1",
+    "tiny-pixel/corporate-communion": "@dev",
+    "wpackagist-plugin/classic-editor": ">=1",
+    "wpackagist-plugin/autodescription": ">=3",
     "wpackagist-plugin/cdn-enabler": ">=1",
     "wpackagist-plugin/dark-mode": ">=3",
-    "wpackagist-plugin/disable-comments": "1.7.1",
-    "wpackagist-plugin/wp-dobby": ">=1.3.0",
-    "wpackagist-plugin/dropit": ">=1.3",
-    "wpackagist-plugin/duplicate-post": ">=3.2.2",
-    "wpackagist-plugin/email-templates": ">=1.2.2.3",
-    "wpackagist-plugin/gutenberg": ">=3.9",
-    "wpackagist-plugin/imagify": ">=1.8.0",
-    "wpackagist-plugin/simple-local-avatars": ">=2.0.0",
-    "wpackagist-plugin/user-switching": ">=1.4",
+    "wpackagist-plugin/disable-comments": ">=1",
+    "wpackagist-plugin/wp-dobby": ">=1",
+    "wpackagist-plugin/dropit": ">=1",
+    "wpackagist-plugin/duplicate-post": ">=3",
+    "wpackagist-plugin/email-templates": ">=1.2",
+    "wpackagist-plugin/gutenberg": ">=3",
+    "wpackagist-plugin/imagify": ">=1",
+    "wpackagist-plugin/simple-local-avatars": ">=2",
+    "wpackagist-plugin/user-switching": ">=1",
     "wpackagist-plugin/wp-mail-smtp": ">=1"
   },
   "require-dev": {
