--- a/site/composer.json
+++ b/site/composer.json
@@ -46,7 +46,7 @@
     "php": ">=5.6",
     "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "4.9.8",
+    "roots/wordpress": ">5",
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/wp-config": "1.0.0",
@@ -55,7 +55,6 @@
     "wpackagist-plugin/updraftplus": ">=1",
     "tiny-packagist/monarch": ">=1",
     "tiny-pixel/wp-performant-media": ">=1",
-    "tiny-pixel/corporate-communion": "@dev",
     "wpackagist-plugin/classic-editor": ">=1",
     "wpackagist-plugin/autodescription": ">=3",
     "wpackagist-plugin/cdn-enabler": ">=1",
