--- a/site/composer.json
+++ b/site/composer.json
@@ -46,14 +46,13 @@
     "php": ">=5.6",
     "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^2.0.1",
-    "roots/wordpress": ">5",
+    "roots/wordpress": ">=5.1",
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/wp-config": "1.0.0",
     "roots/soil": ">=3.7.3",
     "wpackagist-plugin/stream": "^3.2",
     "wpackagist-plugin/updraftplus": ">=1",
-    "tiny-packagist/monarch": ">=1",
     "tiny-pixel/wp-performant-media": ">=1",
     "wpackagist-plugin/classic-editor": ">=1",
     "wpackagist-plugin/autodescription": ">=3",
