--- a/site/wp-cli.yml
+++ b/site/wp-cli.yml
@@ -1,1 +1,11 @@
+# site/wp-cli.yml
 path: web/wp
+
+@development:
+  ssh: vagrant@socialsecurity.valet/srv/www/socialsecurity.valet/current
+
+@staging:
+  ssh: web@staging.socialsecurity.news/srv/www/socialsecurity.news/current
+
+@production:
+  ssh: web@socialsecurity.news/srv/www/socialsecurity.news/current
